layout bug fix

--- a/src/scss/global.scss
+++ b/src/scss/global.scss
@@ -31,39 +31,9 @@ body {
     @apply card w-full h-full bg-orange-300 bg-opacity-50 shadow-xl;
 }
 
-.btn {
-    @apply .btn .btn-sm .btn-primary;
+.btn-outline {
+    border: solid 1px;
 }
-
-// input.input, select.select {
-//     background-color: antiquewhite;
-// }
-
-// .button.is-loading {
-//     border: solid black 1px;
-// }
-
-// button.btn, button.button {
-//     background-color: transparent;
-//     color: black;
-//     border: solid 1px;
-
-//     &:not([disabled]):hover {
-//         background-color: black;
-//         color: white;
-//         border: solid 1px black;
-//     }
-
-//     &.btn-error {
-//         background-color: rgba(202, 27, 27, 0.964);
-//         color: white;
-//         border: none;
-//         &:hover {
-//             background-color: rgba(202, 27, 27, 0.964);
-//             border: solid 1px whitesmoke;
-//         }
-//     }
-// }
 
 .mdc-text-field--focused:not(.mdc-text-field--disabled) .mdc-floating-label {
     color: black;
@@ -83,10 +53,6 @@ body {
     gap: 0.5em;
     align-items: center;
 }
-
-// .splitpanes__pane {
-//     overflow: auto!important;
-// }
 
 td.mdc-data-table__cell {
     user-select: text !important;
